# final-project-rust

./: .gitignore  Cargo.toml  DockerFile  README.md  import_recipes.py
src/: api.rs  main.rs  model.rs
templates/: index.html  recipe.html
yew-client/: Cargo.toml  index.html
yew-client/src/: lib.rs
