[package]
name = "recipe-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12"
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
dotenvy = "0.15"
anyhow = "1"

utoipa = "3"
utoipa-swagger-ui = { version = "3", features = ["axum"] }

